# roottrace

./: .gitignore  CHANGELOG.md  README.md  agent.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20230926_0001_initial.py
docs/: DECISIONS.md
roottrace/: __init__.py  __main__.py  cli.py  config.py
roottrace/api/: main.py
roottrace/api/templates/: base.html  index.html  job_detail.html
roottrace/db/: base.py  models.py  session.py
roottrace/extraction/: entities.py  image.py  pdf.py  text.py  types.py  video.py
roottrace/graph/: service.py
roottrace/ingest/: detector.py  service.py
roottrace/osint/: suggestions.py
roottrace/proof/: package.py
roottrace/scraper/: manager.py
roottrace/ui/: __init__.py  desktop.py
roottrace/utils/: audit.py  files.py  hash.py
tests/: conftest.py  test_api.py  test_cli.py  test_detector.py  test_entities.py  test_extraction.py  test_ingest_service.py  test_ui.py  test_utils.py
